--- a/app/src/main/res/layout/zoom_control.xml
+++ b/app/src/main/res/layout/zoom_control.xml
@@ -1,20 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@android:color/darker_gray">
+    android:background="@android:color/transparent">
 
     <Button
         android:id="@+id/zoom_in_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:insetBottom="0dp"
         android:text="+" />
 
     <Button
         android:id="@+id/zoom_out_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:insetTop="5dp"
+
+        android:layout_below="@+id/zoom_in_button"
         android:text="-" />
 
-</LinearLayout>
+</RelativeLayout>
